<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/conversations_action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/conversations_action_search"/>
    <item
        android:id="@+id/select_did_button"
        android:showAsAction="never"
        android:title="@string/conversations_action_select_dids"/>
    <item
        android:id="@+id/preferences_button"
        android:showAsAction="never"
        android:title="@string/conversations_action_settings"/>
    <item
        android:id="@+id/help_button"
        android:showAsAction="never"
        android:title="@string/conversations_action_help"/>
    <item
        android:id="@+id/credits_button"
        android:showAsAction="never"
        android:title="@string/conversations_action_credits"/>
</menu>